# advent-of-code

./: .pre-commit-config.yaml  LICENSE  README.org  pyproject.toml
2023/: 2023_01.org  2023_02.org  2023_03.org  2023_04.org  2023_09.org  2023_10.org  2023_11.org  2023_14.org  2023_15.org  2023_16.org  2023_18.org
2024/: 2024_01.org  2024_02.org  2024_03.org  2024_04.org  2024_05.org  2024_06.org  2024_07.org  2024_08.org  2024_09.org  2024_10.org  2024_11.org  2024_12.org  2024_13.org  2024_14.org  2024_17.org  2024_18.org  2024_19.org  2024_20.org  2024_21.org  2024_22.org  2024_23.org  2024_25.org
aoc/: aoc.py  initialize.py  template.org  utils.py
tests/: test_utils.py
