[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Enno Hermann <enno.hermann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
advent-of-code-data = "^2.0.1"
jupyter = "^1.0.0"
numpy = "^1.26.2"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
