[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code utilities and solutions"
authors = [{name = "Enno Hermann", email ="enno.hermann@gmail.com"}]
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.13, <3.14"
dependencies = [
    "advent-of-code-data>=2.0.4",
    "jupyter>=1.1.1",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "scipy>=1.14.1",
]

[dependency-groups]
dev = [
    "mypy==1.13.0",
    "ruff==0.8.0",
    "pre-commit==4.0.1",
]

[project.scripts]
aoc-init = "aoc.initialize:initialize"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "aocd.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "DTZ"]
