[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code utilities and solutions"
authors = [{name = "Enno Hermann", email ="enno.hermann@gmail.com"}]
readme = {file = "README.org", content-type = "text/plain"}
requires-python = ">=3.13, <3.14"
dependencies = [
    "advent-of-code-data>=2.1.0",
    "jupyter>=1.1.1",
    "networkx>=3.6",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "mypy==1.19.0",
    "ruff==0.14.7",
    "pre-commit==4.5.0",
    "pytest>=9.0.1",
]

[project.scripts]
aoc-init = "aoc.initialize:initialize"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = [
    "aocd.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "T201", "DTZ"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
